2005-10-27  Alan Modra  <amodra@bigpond.net.au>

	* bfdwin.c (bfd_get_file_window): Seek into file in place of
	using bfd_cache_lookup.

	* cache.c (BFD_CACHE_MAX_OPEN): Make private to this file.
	(bfd_last_cache, bfd_cache_lookup, bfd_cache_lookup_worker): Likewise.
	* libbfd-in.h (bfd_cache_lookup_worker, bfd_last_cache): Delete.
	* libbfd.h: Regenerate.

	* hppabsd-core.c (hppabsd_core_core_file_p): Use bfd_stat, not fstat.
	* sco5-core.c (sco5_core_file_p): Likewise.
	* trad-core.c (trad_unix_core_file_p): Likewise.

	* cache.c: Reorganize file to avoid forward reference.

2005-10-26  Alan Modra  <amodra@bigpond.net.au>

	* cache.c (bfd_cache_lookup_worker): Don't abort on failing to
	reopen file.
	(cache_btell, cache_bseek, cache_bflush, cache_bstat): Return -1 on
	bfd_cache_lookup failure.
	(cache_bread, cache_bwrite): Return 0 on the same.
	* bfdwin.c (bfd_get_file_window): Likewise.
	* hppabsd-core.c (hppabsd_core_core_file_p): Likewise.
	* sco5-core.c (sco5_core_file_p): Likewise.
	* trad-core.c (trad_unix_core_file_p): Likewise.

2005-10-26  Alan Modra  <amodra@bigpond.net.au>

	* cache.c (bfd_cache_lookup_worker): Use bfd_error_handler
	rather than bfd_perror.  Print file name.  Internationalise.

2005-10-26  Alan Modra  <amodra@bigpond.net.au>

	* cache.c (bfd_open_file): Set bfd_error_system_call on failure
	to open file.
	(bfd_cache_lookup_worker): Remove check that file pos is in
	unsigned long range.  Print system error before aborting.

2005-10-25  Arnold Metselaar  <arnold.metselaar@planet.nl>

	* Makefile.am: Add rules for coff-z80 and cpu-z80.
	* Makefile.in: Regenerated.
	* archures.c: Add bfd_arch_z80 and support for it.
	* coffcode.h(coff_set_arch_mach_hook): Add case Z80MAGIC.
	(coff_set_flags): Add case bfd_arch_z80.
	* config.bfd: Add z80coff_vec.
	* configure.in: Add z80coff_vec.
	* reloc.c: Add BFD_RELOC_Z80_DISP8
	* targets.c: Add z80coff_vec.
	* coff-z80.c: New file
	* cpu-z80.c: New file
	* configure: Regenerated.